# privtool

./: .cvsignore  Credits  INSTALL_MOTIF  Mailrc.test  Makefile  Makefile.FreeBSD  Makefile.in  Makefile.linux  Makefile.motif  Privrc.test  Privtool.ad  README  README.1ST  README.FREEBSD  README.orig  TODO_MOTIF  buffers.c  buffers.h  config.h.in  configure.in  debug.h  def.h  delete.xpm  dump  floppy.c  floppy.h  gprops.c  gtk.c  gtk_protos.h  gui.c  gui.h  keys.asc  m_util.c  m_util.h  mail_reader.c  mail_reader.h  mailrc.h  main.c  main.h  md5.sum  (+29 more)
FreeBSD/: mailname.c  parsedate.c
doc_gtk/: user_guide1.html  user_guide2.html  user_guide3.html
doc_motif/: liteclue.html  user_guide1.html  user_guide2.html  user_guide3.html
images/: collapsed.xpm  compose.xpm  compose_is.xpm  delete.xpm  dir.xpm  exclamation.xpm  exclamation2.xpm  expanded.xpm  folderwin.xpm  g_letter.xpm  letter.xpm  letter_mask.xpm  mini-folder.xpm  mini-ofolder.xpm  next.xpm  next_is.xpm  prev_is.xpm  privtool-logo-hc.xpm  privtool-logo-lc.xpm  privtool-mask.xbm  privtool.xbm  privtool_done.xbm  privtool_done_mask.xbm  privtool_empty.xbm  privtool_empty.xpm  privtool_empty_mask.xbm  privtool_new.xbm  privtool_new.xpm  privtool_new_mask.xbm  question.xpm  reply.xpm  reply_is.xpm  undelete.xpm  undelete_is.xpm
linux/: COPYRIGHT  clibrary.h  configdata.h  gettime.c  libinn.h  macros.h  parsedate.c
liteclue/: LiteClue.c  LiteClue.h  LiteClueP.h
premail-0.45mg/: CHANGES  README  doc-0.45.html  doc-0.45.txt  preferences  premail.privtool
